--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,27 @@
+
+.navigation{
+  padding: 20px 30px;
+  /* background-color: black; */
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.navigation a {
+  color: black;
+  font-size: 1.3rem;
+  text-decoration: none;
+}
+
+.navigation a:hover{
+  text-decoration: underline;
+  color: red;
+}
+
+
+
+
+
 .App {
   text-align: center;
 }
